# aoc-2023

./: Cargo.toml  README.md  justfile
aoc-benchmarking/: Cargo.toml
aoc-benchmarking/benches/: bench_main.rs
aoc-cli/: Cargo.toml
aoc-cli/src/: cli.rs
aoc-common/src/: direction.rs  grid.rs  lib.rs
day-001-trebuchet/: Cargo.toml  README.md
day-001-trebuchet/src/: lib.rs
day-002-cube-conundrum/: Cargo.toml  README.md
day-002-cube-conundrum/src/: lib.rs
day-003-gear-ratios/: Cargo.toml  README.md
day-003-gear-ratios/src/: grid.rs  lib.rs
day-004-scratchcards/: Cargo.toml  README.md
day-004-scratchcards/src/: lib.rs
day-005-if-you-give-a-seed-a-fertilizer/: Cargo.toml  README.md
day-006-wait-for-it/: Cargo.toml  README.md
day-006-wait-for-it/src/: lib.rs
day-007-camel-cards/: Cargo.toml
day-008-haunted-wasteland/: Cargo.toml  README.md
day-009-mirage-maintenance/: Cargo.toml  README.md
day-010-pipe-maze/: Cargo.toml  README.md
day-011-cosmic-expansion/: Cargo.toml  README.md
day-012-hot-springs/: Cargo.toml
day-013-point-of-incidence/: Cargo.toml
day-014-parabolic-reflector-dish/: Cargo.toml
day-015-lens-library/: Cargo.toml
day-016-the-floor-will-be-lava/: Cargo.toml
day-017-clumsy-crucible/: Cargo.toml
day-018-lavaduct-lagoon/: Cargo.toml
day-019-aplenty/: Cargo.toml
day-020-pulse-propagation/: Cargo.toml
day-021-step-counter/: Cargo.toml
day-022-sand-slabs/: Cargo.toml
day-023-a-long-walk/: Cargo.toml
day-024-never-tell-me-the-odds/: Cargo.toml
day-025-snowverload/: Cargo.toml
template/: Cargo.toml
(+24 files in other folders)
